# sfml-inhouse-template

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  settings.vscode.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  third-party.cmake
core/: CMakeLists.txt
core/config/: CMakeLists.txt
core/engine/: CMakeLists.txt
core/engine/include/: input_manager.hpp
core/engine/src/: state_machine.cpp
core/gui/: CMakeLists.txt
core/gui/src/: main_menu_state.cpp
core/platform/: CMakeLists.txt
core/platform/src/linux/: linux_platform.cpp
core/utilities/: CMakeLists.txt
source/: CMakeLists.txt  SFMLOrthogonalLayer.hpp  game.cpp  main.cpp
source/config/: CMakeLists.txt
source/config/include/: game.hpp
source/config/src/: config.cpp  game.cpp
source/core/: CMakeLists.txt
source/core/module/src/: lib.cpp
source/engine/: CMakeLists.txt
source/engine/include/: asset_manager.hpp  state_machine.hpp
source/engine/src/: asset_manager.cpp  input_manager.cpp
source/gui/: CMakeLists.txt
source/gui/include/: main_menu_state.hpp
source/include/: config.hpp  game.hpp
source/platform/: CMakeLists.txt
source/platform/include/: iplatform.hpp
source/platform/include/linux/: linux_platform.hpp
source/platform/include/macos/: macos_platform.hpp
source/platform/include/win32/: windows_platform.hpp
source/platform/src/macos/: macos_platform.cpp
source/platform/src/win32/: windows_platform.cpp
source/states/: CMakeLists.txt
source/states/include/: main_menu_state.hpp  state.hpp
source/states/src/: main_menu_state.cpp
source/utilities/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: route-master_test.cpp
